--- a/multiplication.html
+++ b/multiplication.html
@@ -2,24 +2,27 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Vers l'infini et l'au-delà</title>
-    <!-- Icône -->
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
-    <link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
-    <!-- Feuilles CSS -->
-    <link rel="stylesheet" href="multiplication.css">
-    <link rel="stylesheet" href="all.css">
-    <!-- KaTeX -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
-        integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
-        integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
-        crossorigin="anonymous"></script>
-    <!-- Other imports -->
-    <script src="main.js"></script>
-    <script src="autorender.js"></script>
-    <script src="multiplication.js" defer></script>
+	<meta charset="UTF-8">
+	<title>Vers l'infini et l'au-delà</title>
+	<!-- Icône -->
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
+	<!-- Feuilles CSS -->
+	<link rel="stylesheet" href="multiplication.css">
+	<link rel="stylesheet" href="all.css">
+	<!-- KaTeX -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
+		integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
+		integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
+		crossorigin="anonymous"></script>
+	<!-- Google Fonts: home icon -->
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=double_arrow" />
+	<!-- Other imports -->
+	<script src="main.js"></script>
+	<script src="autorender.js"></script>
+	<script src="multiplication.js" defer></script>
 </head>
 
 <body>
@@ -43,9 +46,11 @@
 	</div>
 	<!-- box pour le score /10 -->
 
-    <h2>Tips & Tricks</h2>
-    <p> Décomposer la multiplication en de petites additions <br> Visualiser le calcul<br>  Se souvenir de ses identité remarquables
-    <br> S'entraîner sur la page   <a href = "additions.html" class = "lien"> Addition</a> de notre site</p>
+	<h2>Tips & Tricks</h2>
+	<p> Décomposer la multiplication en de petites additions <br> Visualiser le calcul<br> Se souvenir de ses identité
+		remarquables
+		<br> S'entraîner sur la page <a href="additions.html" class="lien"> Addition</a> de notre site
+	</p>
 </body>
 
 </html>
