--- a/soustractions.html
+++ b/soustractions.html
@@ -12,6 +12,10 @@
 	<script src="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.js"
 		integrity="sha384-7zkQWkzuo3B5mTepMUcHkMB5jZaolc2xDwL6VFqjFALcbeS9Ggm/Yr2r3Dy4lfFg"
 		crossorigin="anonymous"></script>
+	<!-- Google Fonts: home icon -->
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=double_arrow" />
+
 	<!-- Other imports -->
 	<script src="main.js"></script>
 	<script src="autorender.js"></script>
@@ -25,21 +29,21 @@
 	<P></P>
 	<h1>Les soustractions</h1>
 
-    <button onclick="generer()" type="button"> Générer des soustractions aléatoires </button>
-    <div class="bts">
+	<button onclick="generer()" type="button"> Générer des soustractions aléatoires </button>
+	<div class="bts">
 		<button onclick="left()">Scroll left</button>
 		<button onclick="right()">Scroll right</button>
 	</div>
-    <div class="insParent">
+	<div class="insParent">
 		<div id="inserting">
 			<!-- ici viendront les additions -->
 		</div>
 	</div>
-    <button class="bouton" type="button" onclick="score()"> Voir son score </button>
-    <div id="score">
-        <!-- ici viendra le score -->
-    </div>
-    <!-- box pour le score /10 -->
+	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
+	<div id="score">
+		<!-- ici viendra le score -->
+	</div>
+	<!-- box pour le score /10 -->
 
 	<h2>Tips & Tricks</h2>
 	<p> Décomposer la soustraction en plusieurs petites soustractions <br> Visualiser le calcul</p>
